--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
 sentence=AnalogUVSensor library for Arduino.
 paragraph=UV index measurement
-category=Sensor
+category=Sensors
 url=https://github.com/RobTillaart/AnalogUVSensor
 architectures=*
 includes=AnalogUVSensor.h
